@@ -34,9 +34,7 @@
 #' @return 
 #' A SummarizedExperiment of the same class of \code{x} is returned containing summed/averaged matrices 
 #' generated by \code{\link{summarizeAssayByGroup}} on all assays in \code{use.assay.type}.
-#' Column metadata are also aggregated according to the rules in \code{coldata.merge}, see below.
-#'
-#' For the SingleCellExperiment method, any alternative Experiments are removed when \code{use.altexps=NULL}.
+#' Column metadata are also aggregated according to the rules in \code{coldata.merge}, see Details.
 #'
 #' @details
 #' This function summarizes the assay values in \code{x} for each group in \code{ids} using \code{\link{summarizeAssayByGroup}}
@@ -71,6 +69,9 @@
 #' We can explicitly specify computation of the \code{"mean"} or \code{"median"} (or both) with \code{dimred.stats}.
 #' If \code{dimred.stats} is of length greater than 1 or \code{suffix=TRUE},
 #' the name of each matrix in the output \code{\link{reducedDims}} is suffixed with the type of average.
+#'
+#' If \code{x} is a SingleCellExperiment, any alternative Experiments are removed from the output object.
+#' Users should call \code{\link{applySCE}} to repeat the same aggregation on the alternative Experiments if this is desired - see Examples.
 #' 
 #' @author Aaron Lun
 #' @name aggregateAcrossCells
@@ -227,12 +228,11 @@ setMethod("aggregateAcrossCells", "SummarizedExperiment", function(x, ids, ..., 
 #' @importFrom SingleCellExperiment altExp altExps altExp<- altExps<-
 #' reducedDimNames reducedDim<- reducedDim reducedDims<- reducedDims
 setMethod("aggregateAcrossCells", "SingleCellExperiment", function(x, ids, ..., 
-    subset.row=NULL, subset.col=NULL, use.altexps=TRUE, use.dimred=TRUE, dimred.stats=NULL, suffix=FALSE,
+    subset.row=NULL, subset.col=NULL, use.altexps=FALSE, use.dimred=TRUE, dimred.stats=NULL, suffix=FALSE,
     subset_row=NULL, subset_col=NULL, use_altexps=NULL, use_dimred=NULL)
 {
     subset.row <- .replace(subset.row, subset_row)
     subset.col <- .replace(subset.col, subset_col)
-    not.altexps <- missing(use.altexps) && missing(use_altexps)
     use.altexps <- .replace(use.altexps, use_altexps)
     use.dimred <- .replace(use.dimred, use_dimred)
 
@@ -240,17 +240,8 @@ setMethod("aggregateAcrossCells", "SingleCellExperiment", function(x, ids, ...,
     y <- do.call(callNextMethod, c(base.args, list(subset.row=subset.row)))
 
     # Aggregating alternative experiments (deprecated).
-    if ((not.altexps && length(altExpNames(x))) || (!not.altexps && !is.null(use.altexps) && isFALSE(use.altexps))) {
-        .Deprecated(msg="'use.altexps=' is deprecated.\nUse 'applySCE(x, aggregateAcrossCells)' instead.")
-        use.altexps <- .use_names_to_integer_indices(use.altexps, x=x, nameFUN=altExpNames, msg="use.altexps")
-        for (i in use.altexps) {
-            # Do NOT pass use.altexps and use.dimred into the aggregateAcrossCells
-            # call, as this part must work with any SE object.
-            args <- base.args
-            args$x <- altExp(x, i)
-            altExp(y, i) <- do.call(aggregateAcrossCells, args)
-        }
-        altExps(y) <- altExps(y, withColData=FALSE)[use.altexps]
+    if (!is.null(use.altexps) && !isFALSE(use.altexps)) {
+        .Deprecated(msg="'use.altexps=' is deprecated.\nUse 'applySCE(x, aggregateAcrossCells, ...)' instead.")
     } else {
         altExps(y) <- NULL # wiping out alternative experiments, as these were not aggregated.
     }
