@@ -33,7 +33,7 @@ aggregateAcrossCells(x, ...)
   ...,
   subset.row = NULL,
   subset.col = NULL,
-  use.altexps = TRUE,
+  use.altexps = FALSE,
   use.dimred = TRUE,
   dimred.stats = NULL,
   suffix = FALSE,
@@ -94,9 +94,7 @@ This can be one or more of \code{"mean"} and \code{"median"}.}
 \value{
 A SummarizedExperiment of the same class of \code{x} is returned containing summed/averaged matrices 
 generated by \code{\link{summarizeAssayByGroup}} on all assays in \code{use.assay.type}.
-Column metadata are also aggregated according to the rules in \code{coldata.merge}, see below.
-
-For the SingleCellExperiment method, any alternative Experiments are removed when \code{use.altexps=NULL}.
+Column metadata are also aggregated according to the rules in \code{coldata.merge}, see Details.
 }
 \description{
 Sum counts or average expression values for each feature across groups of cells,
@@ -135,6 +133,9 @@ This assumes that the average of low-dimensional coordinates has some meaning fo
 We can explicitly specify computation of the \code{"mean"} or \code{"median"} (or both) with \code{dimred.stats}.
 If \code{dimred.stats} is of length greater than 1 or \code{suffix=TRUE},
 the name of each matrix in the output \code{\link{reducedDims}} is suffixed with the type of average.
+
+If \code{x} is a SingleCellExperiment, any alternative Experiments are removed from the output object.
+Users should call \code{\link{applySCE}} to repeat the same aggregation on the alternative Experiments if this is desired - see Examples.
 }
 \examples{
 example_sce <- mockSCE()
