@@ -54,12 +54,6 @@ If \code{NULL}, nothing is stored.}
 
 \item{BPPARAM}{A \linkS4class{BiocParallelParam} object specifying whether summation should be parallelized.}
 
-\item{subset_row}{Soft-deprecated equivalents to the arguments described above.}
-
-\item{subset_col}{Soft-deprecated equivalents to the arguments described above.}
-
-\item{store_number}{Soft-deprecated equivalents to the arguments described above.}
-
 \item{assay.type}{A string or integer scalar specifying the assay of \code{x} containing the matrix of counts
 (or any other expression quantity that can be meaningfully summed).}
 
